idea/testData/multiModuleLineMarker/transitiveCommon/user_jvm/jvm.kt
actual class <!LINE_MARKER("descr='Has declaration in common module'")!>Expected<!> {
    actual val <!LINE_MARKER("descr='Has declaration in common module'")!>some<!> = Some()
}